--- a/src/app/dishdetail/dishdetail.component.html
+++ b/src/app/dishdetail/dishdetail.component.html
@@ -1,16 +1,50 @@
-<div *ngIf="dish">
-    <h3>Comments</h3>
-    <mat-list>
-        <mat-list-item *ngFor="let comment of dish.comments">
-            <p mat-line>
-                <span>{{comment.comment}}</span>
+<div class="container"
+    fxLayout="row"
+    fxLayout.sm="column"
+    fxLayout.xs="column"
+    fxLayoutAlign.gt-md="space-around center"
+    fxLayoutGap="10px" 
+    fxLayoutGap.xs="0">
+
+  <div fxFlex="40">
+    <div fxFlex *ngIf="dish">
+        <mat-card>
+          <mat-card-header>
+            <mat-card-title>
+              <h3 *ngIf="dish">{{dish.name | uppercase}}</h3>
+            </mat-card-title>
+          </mat-card-header>
+          <img mat-card-image src={{dish.image}} alt={{dish.name}}>
+          <mat-card-content>
+            <p>{{dish.description}}
             </p>
-            <p mat-line>
-                <span>{{comment.rating}} Stars</span>
-            </p>
-            <p mat-line>
-                <span>-- {{comment.author}} {{ comment.date | date }}</span>
-            </p>
-        </mat-list-item>
+          </mat-card-content>
+          <mat-card-actions>
+            <button mat-button (click)="goBack()">BACK</button>
+            <button mat-button>LIKE</button>
+            <button mat-button>SHARE</button>
+          </mat-card-actions>
+        </mat-card>
+      </div>
+  </div>
+
+  <div fxFlex="40">
+    <mat-list *ngIf="dish">
+      <mat-list-item>
+        <h2> Comments </h2>        
+      </mat-list-item>
+      <mat-list-item *ngFor="let comment of dish.comments">
+        <p mat-line>
+          <span> {{comment.comment}} </span>
+        </p>
+        <p mat-line>
+          <span> {{comment.rating}} Stars</span>
+        </p>
+        <p mat-line>
+          <span> -- {{comment.author}} {{comment.date | date}} </span>
+        </p>
+      </mat-list-item>
     </mat-list>
+  </div>
+
 </div>
