--- a/src/styles.scss
+++ b/src/styles.scss
@@ -16,7 +16,7 @@ body {
 }
 
 $lt-gray: #ddd;
-$background-dark: #512DA8;
+$background-dark: #d8d5df;
 $background-light: #9575CD;
 $background-pale: #D1C4E9;
 $primary-color-dark:   #512DA8;
