--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -19,5 +19,7 @@ fxLayoutGap="10px">
     </mat-grid-tile>
     </mat-grid-list>
   </div>
- 
+  <div [hidden]="dishes">
+    <mat-spinner></mat-spinner><h4>Loading . . . Please Wait</h4>
+  </div>
 </div>
